<resources>
    <string name="app_name">我预测</string>
    <string name="aiyoupuintroduce"> \t\t我预测，你高分！
        \n\n\t\t厦门爱优普教育咨询有限公司前身是厦门新航道学校，现已正式更名，仍由我预测教主带领一批明星教师执教，师资力量及校区各项服务没有改变。
        \n\n\t\t我预测开发的雅思在线考试系统，提供准确的雅思考题预测服务，内含雅思考题回忆题库，包含听力、阅读、写作、口语四项，并且有名师公开课录音，是准备参加雅思考试的同学必备的学习工具，另有线下雅思、托福、SAT、GMAT培训课程。</string>
    <string name="welcome">Welcome To Ipredicting</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="prompt">提示</string>
    <string name="acount">账户</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="loading">正在加载中...</string>
    <string name="partchoose">请选择part</string>
    <string name="classchoose">请选择班级</string>
    <string name="datechoose">请选择日期</string>
    <string name="citychoose">请选择城市</string>
    <string name="roomchoose">请选择考场</string>
    <string name="areachoose">请选择地区</string>
    <string name="categorychoose">请选择类别</string>
    <string name="registerPromp1">提示：</string>
    <string name="registerPromp2">1.请前往邮箱/短信箱查看验证码。 </string>
    <string name="registerPromp3">2.若未收到验证码，可能被拦截屏蔽到垃圾短信/垃圾邮件中 </string>
    <string name="registerPromp4">3.已注册的手机号/邮箱无法再进行注册,请更换手机号码/邮箱</string>
    <string name="page_number">"第 %d 页"</string>
    <string name="share">我在i预测超燃，一起来show吧</string>
    <string name="gongyi_lesson">公益课堂</string>
    <string name="gongyi_audio">我预测公开课音频回放</string>
    <string name="gongyi_tecentlesson">我预测腾讯课堂</string>
    <string name="company_phone">客服电话： 0592-5895791</string>
    <string name="company_web">我预测网站：www.iyuce.com</string>
    <string name="share_exam">分享考题</string>
    <string name="search_prompt">大家都在搜索</string>
    <string name="pay_hint">1.通过支付宝支付，将会支付到iyuce@qq.com账号上；\n2.通过微信支付，将会支付到"厦门爱优普教育咨询有限公司"\n3.金币足以抵扣现金，需支付0元人民币，可直接点"确定"支付"</string>
    <string name="login_third_type">亲，您首次使用%s登陆</string>
    <string name="app_version">版本号： 3.2.0</string>

</resources>