<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_register_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#747474"
        android:drawableLeft="@mipmap/arrow_white_back"
        android:gravity="center"
        android:text="注册页面1/2"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_register_acceptphonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="#cccccc"
        android:hint="请输入手机号码"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="11"
        android:padding="8dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_register_acceptmsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#cccccc"
            android:hint="请输入验证码"
            android:imeOptions="actionDone"
            android:maxLength="5"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_register_sendmsg"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="发送验证码" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_tonext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="进入下一步" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="@string/registerPromp1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp4" />

</LinearLayout>