<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_main"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">

        <TextView
            android:id="@+id/txt_gongyi_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="#208b91"
            android:gravity="center"
            android:text="@string/gongyi_lesson"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/arrow_white_back" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_gongyi_audio"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_gongyi"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/icon_gongyi_audio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/gongyi_audio"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gongyi_tencent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_gongyi"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/icon_gongyi_tencent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/gongyi_tecentlesson"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>