<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_register_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="#f7a900"
        android:drawableLeft="@mipmap/arrow_white_back"
        android:gravity="center"
        android:text="注册页面1/2"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_register_acceptphonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@mipmap/icon_phone"
        android:drawablePadding="4dp"
        android:hint="请输入邮箱地址"
        android:imeOptions="actionDone"
        android:padding="8dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_register_acceptmsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/icon_chain"
            android:drawablePadding="4dp"
            android:hint="请输入验证码"
            android:imeOptions="actionDone"
            android:maxLength="5"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_register_sendmsg"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:background="@drawable/buttonstyle_orange"
            android:text="发送验证码"
            android:textColor="#fff" />
    </LinearLayout>

    <!--<EditText-->
        <!--android:id="@+id/edt_activity_loginregister_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:drawableLeft="@mipmap/icon_key"-->
        <!--android:drawablePadding="4dp"-->
        <!--android:hint="请输入新密码" />-->

    <!--<EditText-->
        <!--android:id="@+id/edt_activity_loginregister_passwordagain"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:drawableLeft="@mipmap/icon_key"-->
        <!--android:drawablePadding="4dp"-->
        <!--android:hint="请再次输入密码" />-->

    <Button
        android:id="@+id/btn_register_tonext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="32dp"
        android:background="#f55054"
        android:padding="16dp"
        android:text="进入下一步"
        android:textColor="#fff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="@string/registerPromp1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/registerPromp4" />

</LinearLayout>