<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="选择考场"
        android:textColor="#000000"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:padding="4dp"
            android:text="考场地区"
            android:textColor="#000000"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spn_choose_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:background="@drawable/buttonstyle"
            android:prompt="@string/areachoose" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:padding="4dp"
            android:text="考场地区"
            android:textColor="#000000"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spn_choose_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:background="@drawable/buttonstyle"
            android:prompt="@string/citychoose" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:padding="4dp"
            android:text="考场地区"
            android:textColor="#000000"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spn_choose_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:background="@drawable/buttonstyle"
            android:prompt="@string/roomchoose" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_choose_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="返回"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_choose_sure"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="确定"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>