<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/top_speaking" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="高频统计"
        android:textColor="#2299cc"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <AutoCompleteTextView
            android:id="@+id/autotxt_statis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle_littlegray"
            android:completionThreshold="1"
            android:drawableLeft="@mipmap/icon_search"
            android:hint="  请输入关键词"
            android:imeOptions="actionSearch"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_statis_search"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@drawable/buttonstyle_orange"
            android:gravity="center"
            android:text="搜索"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_statis_more"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/buttonstyle_blue"
            android:text="更多题库"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="4dp"
                android:background="@mipmap/icon_morespinner_black" />

            <Spinner
                android:id="@+id/spinner_statis_part"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp"
                android:prompt="@string/partchoose" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="4dp"
                android:background="@mipmap/icon_morespinner_black" />

            <Spinner
                android:id="@+id/spinner_statis_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp"
                android:prompt="@string/datechoose" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="4dp"
                android:background="@mipmap/icon_morespinner_black" />

            <Spinner
                android:id="@+id/spinner_statis_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp"
                android:prompt="@string/citychoose" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="bottom"
                android:padding="8dp"
                android:text="被考题目"
                android:textColor="#ababab"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="right|bottom"
                android:padding="8dp"
                android:text="投票次数 "
                android:textColor="#ababab"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview_statis_vote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:divider="#cccccc"
        android:dividerHeight="0.5dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbars="none" />

</LinearLayout>